@@ -1,3 +1,7 @@
+2007-04-04  Yvan Vanhullebus  <vanhu@netasq.com>
+	* src/racoon/oakley.c: dumps peer's ID and peer's certificate
+	  subject /subjectaltname if they don't match.
+
 2007-03-26  Yvan Vanhullebus  <vanhu@netasq.com>
 	* src/racoon/isakmp_inf.c: Store the DPD main scheduler in ph1
 	  handler, to be able to cancel it when removing the handler, and
